--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,25 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+/* Customize the scrollbar width */
+::-webkit-scrollbar {
+  width: 7px; /* Width for vertical scrollbar */
+  height: 12px; /* Height for horizontal scrollbar */
+}
+
+/* Customize the scrollbar track */
+::-webkit-scrollbar-track {
+  background: "transparent"; /* Background color of the track */
+  border-radius: 10px; /* Optional: rounded corners */
+}
+
+/* Customize the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the thumb */
+  border-radius: 10px; /* Optional: rounded corners */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the thumb on hover */
+}
